// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  className="sc-bdVaJa iJQmjv"
>
  <Input
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Your city name"
    type="text"
    value=""
  />
  <div
    className="sc-bwzfXH fZUXHc"
  >
    <Magnifier />
  </div>
</form>
`;

exports[`renders correctly when no matches got found 1`] = `
<form
  className="sc-bdVaJa iJQmjv"
>
  <Input
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Your city name"
    type="text"
    value=""
  />
  <div
    className="sc-bwzfXH fZUXHc"
  >
    <Magnifier />
  </div>
  <div
    className="sc-gzVnrw blcucl sc-bZQynM grDNzn"
    onMouseDown={[Function]}
  >
    No cities found
  </div>
</form>
`;

exports[`renders correctly when some cities got found 1`] = `
<form
  className="sc-bdVaJa iJQmjv"
>
  <Input
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Your city name"
    type="text"
    value=""
  />
  <div
    className="sc-bwzfXH fZUXHc"
  >
    <Magnifier />
  </div>
  <ul
    className="sc-htpNat fnJGJO"
  >
    <li
      className="sc-bxivhb jFUnwY"
      onMouseDown={[Function]}
    >
      <p
        className="sc-EHOje cJuKxb"
      >
        London
         
        <span
          className="sc-ifAKCX dzJAFD"
        >
          US
        </span>
      </p>
    </li>
    <li
      className="sc-bxivhb jFUnwY"
      onMouseDown={[Function]}
    >
      <p
        className="sc-EHOje cJuKxb"
      >
        London
         
        <span
          className="sc-ifAKCX dzJAFD"
        >
          GB
        </span>
      </p>
    </li>
  </ul>
</form>
`;
